# ggsql

./: .gitignore  .nojekyll  CHANGELOG.html  CHANGELOG.llms.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  EXAMPLES.md  INSTALLERS.md  LICENSE.md  ODBC.md  Packager.toml  README.md  audit-recommendations.md  audit.md  examples.html  faq.html  faq.llms.md  get_started.html  index.html  index.llms.md  installation.html  listings.json  llms.txt  robots.txt  rust-toolchain.toml  search.json  sitemap.xml  styles.scss
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: R-CMD-check.yaml  autofmt.yaml  build.yaml  publish.yaml  python-release.yml  python.yml  release-installers.yml  release-jupyter.yml  release-packages.yml  release-python.yml  release-vscode.yaml  vscode.yaml  wasm.yaml
doc/: .gitignore  CNAME  _brand.yml  _quarto.yml  bg-lines.js  examples.qmd  faq.qmd  get_started.qmd  ggsql.xml  index.qmd  installation.qmd  styles.scss
doc/gallery/: index.qmd
doc/get_started/: _metadata.yml  anatomy.qmd  first_plot.qmd  grammar.qmd  installation.qmd  the_rest.qmd  tooling.qmd  wrap_up.qmd
doc/syntax/: index.qmd  skill.qmd
gallery/: index.html  index.llms.md
gallery/examples/: bar-chart.html  bar-chart.llms.md  boxplot.html  boxplot.llms.md  density.html  density.llms.md  faceted.html  faceted.llms.md  heatmap.html  heatmap.llms.md  histogram.html  histogram.llms.md  line-chart.html  line-chart.llms.md  minard.html  minard.llms.md  multi-layer.html  multi-layer.llms.md  pie-chart.html  pie-chart.llms.md  scatterplot.html  scatterplot.llms.md  violin.html  violin.llms.md
get_started/: anatomy.html  anatomy.llms.md  first_plot.html  first_plot.llms.md  grammar.html  grammar.llms.md  installation.html  installation.llms.md  the_rest.html  the_rest.llms.md  tooling.html  tooling.llms.md  wrap_up.html  wrap_up.llms.md
get_started/tooling/: cli.html  cli.llms.md  index.html  index.llms.md  jupyter-quarto.html  jupyter-quarto.llms.md  positron-vscode.html  positron-vscode.llms.md  python.html  python.llms.md  r.html  r.llms.md  webassembly.html  webassembly.llms.md
ggsql-R/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.html
ggsql-R/R/: engine.R  ggsql-package.R  reader.R  spec.R  validate.R  vegawidget.R  writer.R
ggsql-R/man/: duckdb_reader.Rd  ggsql-package.Rd  ggsql_execute.Rd  ggsql_execute_sql.Rd  ggsql_has_visual.Rd  ggsql_is_valid.Rd  ggsql_layer_count.Rd  ggsql_layer_data.Rd  ggsql_layer_sql.Rd  ggsql_metadata.Rd  ggsql_register.Rd  ggsql_render.Rd  ggsql_sql.Rd  ggsql_stat_data.Rd  ggsql_stat_sql.Rd  ggsql_unregister.Rd  ggsql_validate.Rd  ggsql_visual.Rd  ggsql_warnings.Rd  render_vegawidget.Rd  vegalite_writer.Rd
ggsql-R/tools/: bootstrap.R  config.R
ggsql-R/vignettes/: ggsql.qmd
ggsql-cli/: CLAUDE.md  Cargo.toml
ggsql-cli/src/: main.rs
ggsql-jupyter/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
ggsql-jupyter/src/: connection.rs  data_explorer.rs  lib.rs  (+6 more)
ggsql-python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
ggsql-python/python/ggsql/: __init__.py  _ggsql.pyi  readers.py  types.py  writers.py
ggsql-python/src/: lib.rs
ggsql-python/tests/: test_ggsql.py
ggsql-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
ggsql-wasm/: CLAUDE.md  Cargo.toml  LICENSE  build-wasm.sh  rust-toolchain.toml
ggsql-wasm/demo/: build.mjs  package-lock.json  package.json
ggsql-wasm/demo/src/: context.ts  editor.ts  examples.ts  index.qmd  main.ts  styles.css
ggsql-wasm/demo/src/quarto/: editor.ts  links.ts  main.ts  styles.css
ggsql-wasm/src/: lib.rs
src/: CHANGELOG.md  CLAUDE.md  Cargo.toml  array_util.rs  build.rs  cli.rs  compute.rs  dataframe.rs  execute.rs  format.rs  lib.rs  naming.rs  rest.rs  util.rs  utils.rs  validate.rs
src/doc/: API.md
src/execute/: casting.rs  cte.rs  layer.rs  mod.rs  position.rs  scale.rs  schema.rs
src/parser/: ast.rs  builder.rs  layer.rs  mod.rs  source_tree.rs  splitter.rs  sql.rs
src/plot/: CLAUDE.md  aesthetic.rs  main.rs  mod.rs  types.rs
src/plot/facet/: resolve.rs  types.rs
src/plot/layer/: mod.rs  orientation.rs
src/plot/layer/geom/: abline.rs  area.rs  arrow.rs  bar.rs  boxplot.rs  density.rs  errorbar.rs  histogram.rs  hline.rs  label.rs  line.rs  linear.rs  mod.rs  path.rs  point.rs  polygon.rs  range.rs  rect.rs  ribbon.rs  rule.rs  segment.rs  smooth.rs  spatial.rs  stat_aggregate.rs  text.rs  tile.rs  types.rs  violin.rs  vline.rs
src/plot/layer/position/: dodge.rs  identity.rs  jitter.rs  mod.rs  stack.rs
src/plot/project/: mod.rs  types.rs
src/plot/projection/: mod.rs  resolve.rs  types.rs
src/plot/projection/coord/: cartesian.rs  flip.rs  map.rs  map_projections.rs  mod.rs  polar.rs
src/plot/scale/: breaks.rs  colour.rs  linetype.rs  mod.rs  palettes.rs  shape.rs  types.rs
src/plot/scale/scale_type/: binned.rs  continuous.rs  date.rs  datetime.rs  discrete.rs  identity.rs  mod.rs  ordinal.rs  time.rs
src/plot/scale/transform/: asinh.rs  bool.rs  date.rs  datetime.rs  exp.rs  identity.rs  integer.rs  log.rs  mod.rs  pseudo_log.rs  sqrt.rs  square.rs  string.rs  time.rs
src/reader/: adbc.rs  bigquery.rs  cache.rs  cache_equivalence.rs  connection.rs  data.rs  duckdb.rs  exasol.rs  hybrid.rs  mod.rs  odbc.rs  polars_sql.rs  snowflake.rs  spec.rs  sqlite.rs
src/reader/odbc/: ffi.rs  mod.rs  snowflake.rs  wrapper.rs
src/validate/: mod.rs  sql_safety.rs
src/writer/: mod.rs  vegalite.rs
src/writer/vegalite/: CLAUDE.md  coord.rs  data.rs  encoding.rs  layer.rs  mod.rs  project.rs  projection.rs
src/writer/vegalite/projection/: cartesian.rs  map.rs  mod.rs  polar.rs
syntax/: index.html  index.llms.md  skill.html  skill.llms.md
syntax_testing/: ggplot2_book.qmd  r4ds_examples.qmd
tree-sitter-ggsql/: .gitignore  Cargo.toml  grammar.js  package.json  pyproject.toml  tree-sitter.json
tree-sitter-vizql/: grammar.js
wasm/: bundle.css  bundle.css.map  ggsql.tmLanguage.json  index.html  index.llms.md  quarto.css  quarto.css.map
(+285 files in other folders)
