[workspace]
members = [
    "tree-sitter-ggsql",
    "src",
    "ggsql-cli",
    "ggsql-jupyter",
    "ggsql-wasm"
]
default-members = [
    "tree-sitter-ggsql",
    "src",
    "ggsql-cli",
    "ggsql-jupyter"
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
# Pinned to CRAN's maximum supported Rust version for the R bindings. Only bump
# this when CRAN does. Setting it here also turns on clippy's `incompatible_msrv`
# lint, which catches accidental use of std APIs newer than this version.
rust-version = "1.86"
authors = ["ggsql Team"]
license = "MIT"
repository = "https://github.com/posit-dev/ggsql"
homepage = "https://ggsql.org"
description = "A declarative visualization language that extends SQL with powerful data visualization capabilities."

[workspace.dependencies]
# workspace packages
tree-sitter-ggsql = { path = "tree-sitter-ggsql", version = "0.4.1" }
ggsql = { path = "src", version = "0.4.1" }

# Parsing
csscolorparser = "0.8.1"
tree-sitter = "0.26"

# Data container
arrow = { version = "58", default-features = false }

# Readers
duckdb = { version = "~1.10502", features = ["bundled", "vtab-arrow"] }
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }
bytes = "1"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "load_extension"] }

# ODBC
toml_edit = "0.22"
libloading = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Color interpolation
palette = { version = "0.7", default-features = false, features = ["std", "approx"] }

# Spatial
geozero = { version = "0.14", default-features = false }

# Utilities
regex = "1.10"
chrono = "0.4"
rand = "0.8"
const_format = "0.2"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.35", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"
panic = "abort"

[patch.crates-io]
sqlite-wasm-rs = { git = "https://github.com/ggsql-dev/sqlite-wasm-rs.git", branch = "loadable-extensions" }
