[package]
name = "ggsql-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for ggsql."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
csv = "1"
arrow = { workspace = true }
ggsql = { path = "../src", default-features = false, features = ["vegalite", "sqlite", "builtin-data"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.35", default-features = false }
sqlite-wasm-rs = "0.5.2"
# getrandom is pulled in transitively by arrow (via ahash/const-random) and needs
# the "js" feature to support wasm32-unknown-unknown. This must be declared here
# so cargo's feature unification activates it for the transitive dep.
getrandom = { version = "0.2", features = ["js"] }

